--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "eslint": "^9.4.0",
     "typescript": "^5.4.5"
   }
 }
