--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@typescript-eslint/parser": "^7.11.0",
     "eslint": "^9.4.0",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
