--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "eslint": "^9.4.0",
