--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "eslint": "^9.4.0",
+    "nodemon": "^3.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
